{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 65,
  "lineage": "2f2d40f7-55f3-685e-2d3b-688d6d433dfd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "roche_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08ba6464b29af6cc2",
            "arn": "arn:aws:ec2:ap-south-1:864981748154:elastic-ip/eipalloc-08ba6464b29af6cc2",
            "association_id": "eipassoc-0cab057f48e5cdf41",
            "domain": "vpc",
            "id": "eipalloc-08ba6464b29af6cc2",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-02381171fc01c92dc",
            "private_dns": "ip-10-0-0-203.ap-south-1.compute.internal",
            "private_ip": "10.0.0.203",
            "public_dns": "ec2-13-127-84-54.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.127.84.54",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "roche_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:864981748154:internet-gateway/igw-00619b629aebb09c7",
            "id": "igw-00619b629aebb09c7",
            "owner_id": "864981748154",
            "tags": {
              "Name": "roche_igw"
            },
            "tags_all": {
              "Name": "roche_igw"
            },
            "vpc_id": "vpc-0dbd4532cdcd8e3f9"
          },
          "dependencies": [
            "aws_vpc.roche_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "roche_nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08ba6464b29af6cc2",
            "association_id": "eipassoc-0cab057f48e5cdf41",
            "connectivity_type": "public",
            "id": "nat-0992d693a60bde437",
            "network_interface_id": "eni-02381171fc01c92dc",
            "private_ip": "10.0.0.203",
            "public_ip": "13.127.84.54",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0734c92a026f50972",
            "tags": {
              "Name": "roche_nat_gw"
            },
            "tags_all": {
              "Name": "roche_nat_gw"
            }
          },
          "dependencies": [
            "aws_eip.roche_eip",
            "aws_subnet.roche_public",
            "aws_vpc.roche_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "roche_private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01624b961fa780d4a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0992d693a60bde437",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01624b961fa780d4a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.roche_eip",
            "aws_nat_gateway.roche_nat_gw",
            "aws_route_table.roche_rt_private",
            "aws_subnet.roche_public",
            "aws_vpc.roche_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "roche_public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-00619b629aebb09c7",
            "id": "r-rtb-0fde606fff4f6ede91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fde606fff4f6ede9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.roche_igw",
            "aws_route_table.roche_rt_public",
            "aws_vpc.roche_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "roche_rt_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:864981748154:route-table/rtb-01624b961fa780d4a",
            "id": "rtb-01624b961fa780d4a",
            "owner_id": "864981748154",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0992d693a60bde437",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "roche_rt_private"
            },
            "tags_all": {
              "Name": "roche_rt_private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dbd4532cdcd8e3f9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.roche_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "roche_rt_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:864981748154:route-table/rtb-0fde606fff4f6ede9",
            "id": "rtb-0fde606fff4f6ede9",
            "owner_id": "864981748154",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00619b629aebb09c7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "roche_rt_public"
            },
            "tags_all": {
              "Name": "roche_rt_public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dbd4532cdcd8e3f9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.roche_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "roche_rt_private_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c046520223cee397",
            "route_table_id": "rtb-01624b961fa780d4a",
            "subnet_id": "subnet-0a64aa26641c3d078"
          },
          "dependencies": [
            "aws_route_table.roche_rt_private",
            "aws_subnet.roche_private",
            "aws_vpc.roche_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-000f1c8970e8cd9b4",
            "route_table_id": "rtb-01624b961fa780d4a",
            "subnet_id": "subnet-0b1dee203673e3f68"
          },
          "dependencies": [
            "aws_route_table.roche_rt_private",
            "aws_subnet.roche_private",
            "aws_vpc.roche_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0acb7f31c5b3b51a1",
            "route_table_id": "rtb-01624b961fa780d4a",
            "subnet_id": "subnet-098001915c7b6b694"
          },
          "dependencies": [
            "aws_route_table.roche_rt_private",
            "aws_subnet.roche_private",
            "aws_vpc.roche_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "roche_rt_public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c4d18274cfed5e01",
            "route_table_id": "rtb-0fde606fff4f6ede9",
            "subnet_id": "subnet-0734c92a026f50972"
          },
          "dependencies": [
            "aws_route_table.roche_rt_public",
            "aws_subnet.roche_public",
            "aws_vpc.roche_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d3681fc276b8ed09",
            "route_table_id": "rtb-0fde606fff4f6ede9",
            "subnet_id": "subnet-01cd87de10ec1e8e3"
          },
          "dependencies": [
            "aws_route_table.roche_rt_public",
            "aws_subnet.roche_public",
            "aws_vpc.roche_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fcfe5136f0c30eb9",
            "route_table_id": "rtb-0fde606fff4f6ede9",
            "subnet_id": "subnet-05529cb9f898afff6"
          },
          "dependencies": [
            "aws_route_table.roche_rt_public",
            "aws_subnet.roche_public",
            "aws_vpc.roche_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "roche_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:864981748154:subnet/subnet-0a64aa26641c3d078",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a64aa26641c3d078",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "864981748154",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "roche_private_sub-0"
            },
            "tags_all": {
              "Name": "roche_private_sub-0"
            },
            "vpc_id": "vpc-0dbd4532cdcd8e3f9"
          },
          "dependencies": [
            "aws_vpc.roche_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:864981748154:subnet/subnet-0b1dee203673e3f68",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b1dee203673e3f68",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "864981748154",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "roche_private_sub-1"
            },
            "tags_all": {
              "Name": "roche_private_sub-1"
            },
            "vpc_id": "vpc-0dbd4532cdcd8e3f9"
          },
          "dependencies": [
            "aws_vpc.roche_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:864981748154:subnet/subnet-098001915c7b6b694",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-098001915c7b6b694",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "864981748154",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "roche_private_sub-2"
            },
            "tags_all": {
              "Name": "roche_private_sub-2"
            },
            "vpc_id": "vpc-0dbd4532cdcd8e3f9"
          },
          "dependencies": [
            "aws_vpc.roche_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "roche_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:864981748154:subnet/subnet-0734c92a026f50972",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0734c92a026f50972",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "864981748154",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "roche_public_sub-0"
            },
            "tags_all": {
              "Name": "roche_public_sub-0"
            },
            "vpc_id": "vpc-0dbd4532cdcd8e3f9"
          },
          "dependencies": [
            "aws_vpc.roche_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:864981748154:subnet/subnet-01cd87de10ec1e8e3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01cd87de10ec1e8e3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "864981748154",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "roche_public_sub-1"
            },
            "tags_all": {
              "Name": "roche_public_sub-1"
            },
            "vpc_id": "vpc-0dbd4532cdcd8e3f9"
          },
          "dependencies": [
            "aws_vpc.roche_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:864981748154:subnet/subnet-05529cb9f898afff6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05529cb9f898afff6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "864981748154",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "roche_public_sub-2"
            },
            "tags_all": {
              "Name": "roche_public_sub-2"
            },
            "vpc_id": "vpc-0dbd4532cdcd8e3f9"
          },
          "dependencies": [
            "aws_vpc.roche_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "roche_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:864981748154:vpc/vpc-0dbd4532cdcd8e3f9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0aede69856b3cb0d0",
            "default_route_table_id": "rtb-0afeb67346050aa9e",
            "default_security_group_id": "sg-009c9ba06ec2e68a6",
            "dhcp_options_id": "dopt-00cff0f80e547345c",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0dbd4532cdcd8e3f9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0afeb67346050aa9e",
            "owner_id": "864981748154",
            "tags": {
              "Name": "roche-vpc"
            },
            "tags_all": {
              "Name": "roche-vpc"
            }
          }
        }
      ]
    }
  ]
}